--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ button {
     padding: 12px 10px;
     outline: none;
     color: #fff;
-    background: linear-gradient(to right, bisque, #f56f5a);
+    background: linear-gradient(to right, bisque, #f56f5a, blue);
     border-radius: 6px;
     cursor: pointer;
     transition: 0.5s;
