--- a/style.css
+++ b/style.css
@@ -186,12 +186,13 @@ button:hover {
 
 .card-group {
     display: flex;
-    margin: 0 20px;   
+    margin: 0 20px; 
+    width: 100%;  
 }
 .card {
     margin: 10px;
     width: 100%;
-    max-width: 300px;
+    
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     overflow: hidden;
