--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     left: 0;
     width: 100%;
     z-index:9999;
-    background-color: #f2ebe5;
+    background-color: burlywood;
 }
 
 .logo {
@@ -79,6 +79,7 @@
 
   .navbar li:hover ul.dropdown {
     display: block;
+    box-shadow: #f56f5a;
   }
 
   .navbar li ul.dropdown li {
@@ -197,11 +198,12 @@ button:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     overflow: hidden;
     background-color:  bisque;
+    
 }
 
 .card:hover {
     transform: scale(1.05);
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 16px 36px 0 rgba(240, 84, 84, 0.2);
 }
 
 .card img {
@@ -253,5 +255,5 @@ p {
 }
 footer{
     text-align: center;
-    background-color: #f2ebe5;
+    background-color: burlywood;
 }
