added background color to courses

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
     display: none;
     position: absolute;
     left: 50;
-    background-color: #f0f0f0;
+    background-color: burlywood;
     padding: 0;
   }
 
