--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
     height: 2px;
     bottom: -5px;
     left: 0;
-    background-color: orange;
+    background-color: blueviolet;
     visibility: hidden;
     transform: scaleX(0);
     transition: all 0.5s ease-in-out 0s;
