--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 .navbar {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     background: none;
@@ -193,19 +194,17 @@ button:hover {
 .card {
     margin: 10px;
     width: 100%;
-    
+    display: flex;
+    flex-wrap: wrap;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     overflow: hidden;
     background-color:  bisque;
-    
 }
-
 .card:hover {
     transform: scale(1.05);
     box-shadow: 0 16px 36px 0 rgba(240, 84, 84, 0.2);
 }
-
 .card img {
     width: 100%;
     height: auto;
